cabal-version: 3.4

Name:                pem
Version:             0.2.4
Synopsis:            Privacy Enhanced Mail (PEM) format reader and writer
Description:         A library for reading and writing the Privacy Enhanced Mail (PEM) format.
License:             BSD-3-Clause
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Build-Type:          Simple
Category:            Data
stability:           experimental
Homepage:            http://github.com/vincenthz/hs-pem
extra-source-files:  Tests/pem.hs

common lang
  default-extensions: LambdaCase
  default-language:   GHC2021
  ghc-options:        -Wall

Library
  import:            lang
  Build-Depends:     base >= 3 && < 5
                   , mtl
                   , bytestring
                   , basement
                   , memory
  Exposed-modules:   Data.PEM
                     Data.PEM.Parser
                     Data.PEM.Writer
                     Data.PEM.Types
                     Data.PEM.Class


Test-Suite test-pem
  import:          lang
  type:            exitcode-stdio-1.0
  hs-source-dirs:  Tests
  main-is:         pem.hs
  build-depends:   base
                 , bytestring
                 , test-framework >= 0.3.3
                 , test-framework-quickcheck2
                 , test-framework-hunit
                 , HUnit
                 , QuickCheck >= 2.4.0.1
                 , pem

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-pem
